[gd_scene load_steps=15 format=2]

[ext_resource path="res://button.gd" type="Script" id=1]
[ext_resource path="res://assets/button.png" type="Texture" id=2]
[ext_resource path="res://assets/7et.png" type="Texture" id=3]
[ext_resource path="res://UI/VIKING-N.TTF" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.54179, 7.96224 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2.97725, 43.7358 )

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "bottonoff2"
length = 0.9
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "buttom off"
length = 0.9
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "buttonon"
length = 0.9
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "buttonon2"
length = 0.9
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "door"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "door1O"
length = 0.8

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="button" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.734837, 0 )
texture = ExtResource( 2 )
hframes = 3

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0.5, 48.5 )
texture = ExtResource( 2 )
hframes = 3

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 56, 16.1037 )
scale = Vector2( 1, 1.06039 )
texture = ExtResource( 3 )
hframes = 2

[node name="button1" type="Area2D" parent="."]
position = Vector2( -0.265163, 0 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="button1"]
position = Vector2( 1, 3.28182 )
shape = SubResource( 1 )

[node name="button2" type="Area2D" parent="."]
position = Vector2( 1.5, 50.5 )
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="button2"]
position = Vector2( -1, 1 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, -1.72968 )
collision_mask = 2

[node name="bab" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 55.0578, 16.4892 )
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 2 )
anims/bottonoff2 = SubResource( 5 )
"anims/buttom off" = SubResource( 4 )
anims/buttonon = SubResource( 3 )
anims/buttonon2 = SubResource( 6 )
anims/door = SubResource( 8 )
anims/door1O = SubResource( 7 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -37.1304
margin_top = 23.1022
margin_right = 210.87
margin_bottom = 40.1022
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 10 )
text = "press E to open door"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="button1" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="button1" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="button2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="button2" to="." method="_on_Area2D2_body_exited"]
